@@ -1,7 +1,6 @@
 #include<assert.h>
 #include"Boss/JsonInput.hpp"
 #include"Boss/Msg/JsonCin.hpp"
-#include"Boss/concurrent.hpp"
 #include"Ev/ThreadPool.hpp"
 #include"Jsmn/Object.hpp"
 #include"S/Bus.hpp"
@@ -39,9 +38,9 @@ public:
 				/* Exit loop.  */
 				return Ev::lift();
 
-			return Boss::concurrent(bus.raise(Boss::Msg::JsonCin{
+			return bus.raise(Boss::Msg::JsonCin{
 					std::move(*pobj)
-			       }))
+			       })
 			     + run()
 			     ;
 		});
